# workout-tracker

./: .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile  app.py  config.py  main.py  models.py  oauth2.py  openapi.json  pyproject.toml  requirements.txt  schemas.py
alembic/: env.py
alembic/versions/: 10cdbba0c512_updated_workout_plan_model_and_user_.py  39e8df8de138_added_workoutplan_week_and_days_model.py  5d57d6c86cec_added_progress_model.py  78d1a11df902_initial.py  87c4c1b951cf_create_workoutplan_and_.py  a881f1f64451_added_workout_logs.py  b8b64e2e18b2_added_workout_logs_exercies.py  df444e225f28_updated_workout_plan_exercise_model.py
db/: connection.py  database.py
migrations/: env.py
migrations/versions/: 10574365cbe3_initial_migration.py  7b8eec84d0a3_added_country_code_column_to_profile_.py  9fea74d0fae5_removed_unique_constraint.py  d0c0884dc4f9_manually_add_foreign_keys_to_auth_users_.py  db12c0d13f2a_.py
routes/: auth.py  exercise.py  genai.py  progress.py  users.py  workout.py  workout_logs.py
utils/: cache.py  logger.py  password.py
